--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 body {
   font-family: 'Rye', cursive;
   background-color: #eafbff;
-  background-image: linear-gradient(to bottom, #eafbff 0%, #eafbff 50%, #524b3d 50%, #314c75 100%);
+  background-image: linear-gradient(to bottom, #eafbff 0%, #eafbff 50%, #74c17d 50%, #1e4419 100%);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -28,7 +28,7 @@ nav {
 }
 
 nav.active {
-  width: 350px;
+  width: 400px;
 }
 
 nav ul {
@@ -60,4 +60,41 @@ nav ul a {
   color: #000;
   text-decoration: none;
   margin: 0 10px;
+}
+
+.icon {
+  background-color: #fff;
+  border: 0;
+  cursor: pointer;
+  padding: 0;
+  position: relative;
+  height: 30px;
+  width: 30px;
+}
+
+.icon:focus {
+  outline: 0;
+}
+
+.icon .line {
+  background-color: #5290f9;
+  height: 2px;
+  width: 20px;
+  position: absolute;
+  top: 10px;
+  left: 5px;
+  transition: transform .6s linear;
+}
+
+.icon .line2 {
+  top: auto;
+  bottom: 10px;
+}
+
+nav.active .icon .line1 {
+  transform: rotate(-765deg) translateY(5.5px);
+}
+
+nav.active .icon .line2 {
+  transform: rotate(765deg) translateY(-5.5px);
 }
